--- a/gene/index.html
+++ b/gene/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>GENE v1.3.6</title> <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="./icons/32x32.png" type="image/png">
+    <!-- You can create a 32x32.png from your 512x512.png or 192x192.png -->
+    <link rel="apple-touch-icon" href="./icons/192x192.png"> 
+    <!-- For older browsers or if you want an .ico file -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
